# gitwink

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.ja.md  README.ko.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml  store.yml
docs/: architecture.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  discovery.rs  discovery_orchestrator.rs  fetch.rs  git.rs  lib.rs  main.rs  settings.rs  tray.rs  update.rs  watcher.rs  window.rs
src/components/: AuthorsChip.tsx  BranchChip.tsx  ChangedFiles.tsx  ChipDropdown.tsx  CommitDetail.tsx  ContextMenu.tsx  DiffApp.tsx  DiffMinimap.tsx  DiffView.tsx  LaneGraph.tsx  RepoChip.tsx  SearchBar.tsx  Settings.tsx  SideBySideDiff.tsx  TimeRangeChip.tsx  Timeline.tsx  TimelineWindowed.tsx  UpdateModal.tsx  VirtualChipList.tsx
src/lib/: bridge.test.ts  bridge.ts  colors.ts  commitClipboard.ts  diffView.test.ts  diffView.ts  highlight.ts  ipc.ts  lanes.test.ts  lanes.ts  settings.ts  smartcopy.ts  useTimelineWindow.ts
tools/: deploy-store.ps1
