[package]
name = "gitwink"
version = "0.1.2"
description = "Tray-resident, read-only git glance for the AI-agent era."
authors = ["var-gg"]
edition = "2021"
license = "MIT"
repository = "https://github.com/var-gg/gitwink"

[lib]
name = "gitwink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }

git2 = { version = "0.19", default-features = false }
ignore = "0.4"
walkdir = "2"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
